--- a/sections/sec_5_2.tex
+++ b/sections/sec_5_2.tex
@@ -200,7 +200,7 @@
     Also suppose that $A \subseteq B$ where $|A| = \ccont$.
     Now define a set
     $$
-    P = \braces{x \in C \where \exists y \in C ((x,y) \in A} \,.
+    P = \braces{x \in C \where \exists y \in C ((x,y) \in A)} \,.
     $$
     Clearly then $|P| \leq |A| = \ccont$.
     Since also $|C| = 2^\ccont$ but $P \subseteq C$ it follows that there is an $x_0 \in C$ where $x_0 \notin P$.
