--- a/theorems.tex
+++ b/theorems.tex
@@ -15,7 +15,8 @@
 \input{macros}
 
 % Question label format
-\qformat{\hspace{0.5cm} \textbf{Theorem \thesubsection.\thequestion} \hfill \vrule depth 1em width 0pt}
+\newcommand\setqf[1]{\qformat{\hspace{0.5cm} \textbf{Theorem \thesubsection.\thequestion #1} \hfill \vrule depth 1em width 0pt}}
+\setqf{}
 
 % Lemmas/Corollaries environments
 \newtheorem{lem}{Lemma}[subsubsection]
@@ -661,6 +662,331 @@
     However, we would also clearly have that $\fb \ss \fbb$ but $\fb \neq \fbb$, which would contradict the maximality of $\fb$.
     So it has to be that $\dom{\fb} = S$.
     Clearly then $\fb$ is a choice function for $S$ since, for any $X \in S$, we have that $\fb(X) \in X$ since $\fb \in F$.
+  }
+}
+
+\subsection{The Axiom of Choice in Mathematics}
+
+\theoremapp{10}{*}{
+  Let $p$ be a sublinear functional on the vector space $V$, and let $f_0$ be a linear functional defined on a subspace $V_0$ of $V$ such that $f_0(v) \leq p(v)$ for all $v \in V_0$.
+  Then there is a linear functional $f$ defined on $V$ such that $f \supseteq f_0$ and $f(v) \leq p(v)$ for all $v \in V$.
+}
+\sol{
+  \begin{lem}\label{lem:aoc:subspace}
+    If $\famF$ is a nonempty system of subspaces of a vector space $V$ over scalar field $K$ that is linearly ordered by $\ss$, then $\bigcup \famF$ is also a subspace of $V$.
+  \end{lem}
+  \qproof{
+    First, since $\famF$ is nonempty, there is a subspace $W \in \famF$.
+    Since $W$ is a subspace, it follows that the zero vector $0$ is in $W$.
+    Hence clearly $0 \in \bigcup \famF$ since $W \in \famF$.
+    
+    Now consider any vectors $v_1$ and $v_2$ in $\bigcup \famF$.
+    Then there are subspaces (of $V$) $V_1$ and $V_2$ in $\famF$ such that $v_1 \in V_1$ and $v_2 \in V_2$.
+    Since $\ss$ linearly orders $\famF$ we have that either $V_1 \ss V_2$ or $V_2 \ss V_1$.
+    Without loss of generality we can assume that $V_1 \ss V_2$ since the other case is analogous.
+    Thus we have that both $v_1$ and $v_2$ are in $V_2$ since $v_1 \in V_1 \ss V_2$.
+    Since $V_2$ is a subspace it follows that $v_1 + v_2 \in V_2$ so that clearly also $v_1 + v_2 \in \famF$ since $V_2 \in \famF$.
+
+    Lastly, consider a vector $v \in \bigcup \famF$ and scalar $c \in K$.
+    Then there is a subspace $W \in \famF$ such that $v \in W$.
+    It then follows that $cv \in W$ so that clearly $cv \in \bigcup \famF$.
+
+    This shows that $\bigcup \famF$ is a subspace of $V$ as desired.
+  }
+  
+  \mainthrm
+  \qproof{
+    Let $F$ be the set of all linear functionals $g$ defined on some subspace $W$ of $V$ such that
+    \gath{
+      f_0 \ss g \text{ and } g(v) \leq p(v) \text{ for all } v \in W \,.
+    }
+    Let $F_0 \ss F$ be linearly ordered by $\ss$.
+    If $F_0 = \es$ then $f_0$ is an $\ss$-upper bound of $F_0$ since clearly $f_0 \in F$ (with subspace $V_0$).
+    So assume that $F_0$ is nonempty so that $g_0 = \bigcup F_0$ is clearly an $\ss$-upper bound of $F_0$.
+    It is trivial to show that $F_0$ is a compatible system of functions since it is linearly ordered by $\ss$.
+    Hence $g_0 = \bigcup F_0$ is a function with $\dom(g_0) = \bigcup_{g \in F_0} \dom(g)$ by Theorem~2.3.12 where $g_0$ extends all $g \in F_0$.
+
+    We also show that $\braces{\dom(g) \where g \in F_0}$ is a set of subspaces of $V$ that is linearly ordered by $\ss$.
+    Consider any $g$ and $h$ in $F_0$.
+    Then either $g \ss h$ or $h \ss g$.
+    Without loss of generality we can assume that the former is the case ($g \ss h$) since the other case is analogous.
+    Now consider any $v \in \dom(g)$ so that clearly $(v, g(v)) \in g$.
+    Then we have $(v, g(v)) \in h$ since $g \ss h$.
+    Thus $v \in \dom(h)$ as well so that $\dom(g) \ss \dom(h)$ since $v$ was arbitrary.
+    The result then follows since $g$ and $h$ were arbitrary.
+    
+    Having shown this, it follows from Lemma~\ref{lem:aoc:subspace} that $\dom(g_0) = \bigcup \braces{\dom(g) \where g \in F_0}$ is also a subspace of $V$.
+    Now we show that $g_0$ is a linear functional.
+    So consider any $u$ and $v$ in $\dom(g_0)$ and $\a$ and $\b$ in $\reals$.
+    Then there is a $g$ and $g'$ in $F_0$ where $u \in \dom(g)$ and $v \in \dom(g')$.
+    Since we showed that $\braces{\dom(g) \where g \in F_0}$ is linearly ordered by $\ss$, we have that either $\dom(g) \ss \dom(g')$ or $g' \ss g$.
+    If $\dom(g) \ss \dom(g)'$ then both $u$ and $v$ are in $\dom(g')$ since $u \in \dom(g) \ss \dom(g')$.
+    Thus $\a \cdot u + \b \cdot v \in \dom(g')$ since $g'$ is a linear functional since $g' \in F_0 \ss F$.
+    Hence clearly $\a \cdot u + \b \cdot v \in \dom(g_0)$ since $g' \in F_0$.
+    We then also have that
+    \gath{
+      g_0(\a \cdot u + \b \cdot v) = g'(\a \cdot u + \b \cdot v) = \a \cdot g'(u) + \b \cdot g'(v) = \a \cdot g_0(u) + \b \cdot g_0(v)
+    }
+    since $g_0$ extends $g'$.
+    The case in which $\dom(g') \ss \dom(g)$ is analogous, thereby showing that $g_0$ is a linear functional on the subspace $\dom(g_0)$.
+
+    We also clearly have that $f_0 \ss g_0$.
+    To see this, note that, since $F_0 \neq \es$, there is a $g \in F_0$ so that $g \in F$ since $F_0 \ss F$.
+    Therefore $f_0 \ss g$ by the definition of $F$.
+    We also clearly have that have that $g \ss g_0$ since $g_0 = \bigcup F_0$ and $g \in F_0$.
+    Therefore $f_0 \ss g \ss g_0$ as desired.
+
+    Now we show that $g_0(v) \leq p(v)$ for all $v \in \dom(g_0)$.
+    So consider any such $v$ so that there is a $g \in F_0$ such that $v \in \dom(g)$ since it was shown above that $\dom(g_0) = \bigcup_{g \in F_0} \dom(g)$.
+    Thus also $g \in F$ since $F_0 \ss F$.
+    It then follows that $g(v) \leq p(v)$ by the definition of $F$.
+    However, since $g_0$ extends $g$, we have that $g_0(v) = g(v) \leq p(v)$.
+    This shows the result since $v$ was arbitrary.
+
+    We have therefore shown all of the facts required to conclude that indeed $g_0 \in F$ by the definition of $F$.
+    Since $g_0$ is an upper bound of $F_0$ and $F_0$ was arbitrary, this shows that the conditions of Zorn's Lemma have been satisfied so that $F$ has a $\ss$-maximal element $f$.
+    We claim that $f$ is our linear functional on $V$ such that $f_0 \ss f$ and $f(v) \leq p(v)$ for all $v \in V$.
+
+    Clearly all we must show is that $\dom(f) = V$ since the rest is true by virtue of $f$ being in $F$.
+    We know that $\dom(f)$ is a subspace of $V$ since $f \in F$ so that $\dom(f) \ss V$.
+    Assume to the contrary that $\dom(f) \neq V$ so that $\dom(f) \pss V$ and there is a $u \in V - \dom(f)$.
+    Then let $W$ be the subspace of $V$ spanned by $\dom(f) \cup \braces{u}$.
+    It follows then that every vector $w \in W$ can be uniquely expressed as $w = x + \a \cdot u$ for $x \in \dom(f)$ and $\a \in \reals$.
+    So define the function
+    \gath{
+      f_c(w) = f(x) + \a \cdot c
+    }
+    for each $w \in W$ (where $w = x + \a \cdot u$) and a $c \in \reals$.
+
+    First we show that $f_c$ is a linear functional on $W$ for any choice of $c$.
+    Clearly $f_c : W \to \reals$ since $\ran(f) \ss \reals$ and $\a$ and $c$ are real (so that $f_c(w) = f(x) + \a \cdot c$ is clearly real).
+    Now consider any $w$ and $v$ in $W$ and $a$ and $b$ in $\reals$.
+    Then there are unique $x,y \in \dom(f)$ and $\a,\b \in \reals$ where $w = x + \a \cdot u$ and $v = y + \b \cdot u$.
+    We then have
+    \gath{
+      a\cdot w + b \cdot v = a \cdot (x + \a \cdot u) + b \cdot (y + \b \cdot u) = (a\cdot x + b \cdot y) + (a \a + b \b) \cdot u \,,
+    }
+    noting that $a \cdot x + b \cdot y \in \dom(f)$ since $\dom(f)$ is a subspace and $x$ and $y$ are in $\dom(f)$, and $a\a + b \b \in \reals$.
+    It then follows that
+    \ali{
+      f_c(a \cdot w + b \cdot v) &= f(a\cdot x + b \cdot y) + (a \a + b \b) c = a f(x) + bf(y) + a \a c + b \b c \\
+      &= a \squares{f(x) + \a c} + b \squares{f(y) + \b c} = a f_c(w) + b f_c(v)
+    }
+    so that $f_c$ is indeed a linear functional on $W$.
+
+    Now consider any $(x, a) \in f$ so that clearly the vector $x$ is in $\dom(f)$.
+    Then also $x \in W$ since $W = \dom(f) \cup \braces{u}$.
+    Also clearly $x = x + 0 \cdot u$ so that $f_c(x) = f(x) + 0 \cdot c = f(x) = a$.
+    Hence $(x, a) \in f_c$ so that $f \ss f_c$ since $(x,a)$ was arbitrary.
+    However we also clearly have that $u \in W$ but $u \notin \dom(f)$ so that $(u, f_c(u)) \in f_c$ but $(u, f_c) \notin f$.
+    Therefore $f \neq f_c$ so that $f \pss f_c$.
+    This also clearly implies that $f_0 \ss f_c$ since $f_0 \ss f \pss f_c$.
+
+    Now, for all $v$ and $t$ in $\dom(f)$ we have
+    \gath{
+      f(v) + f(t) = f(v + t) \leq p(v + t) = p(\squares{v - u} + \squares{t + u}) \leq p(v-u) + p(t+u)
+    }
+    by the linear properties of $f$ and $p$.
+    Hence
+    \gath{
+      f(v) - p(v-u) \leq p(t+u) - f(t) \,.
+    }
+    Since $v$ was arbitrary, it follows that the set $\braces{f(v) - p(v-u) \where v \in \dom(f)}$ has an upper bound so that $A = \sup\braces{f(v) - p(v-u) \where v \in \dom(f)}$ exists.
+    Similarly, since $t$ was arbitrary, the set $\braces{p(t + u) - f(t) \where t \in \dom(f)}$ has a lower bound so that $B = \inf\braces{p(t + u) - f(t) \where t \in \dom(f)}$ exists.
+    We then also clearly have that $A \leq B$.
+    So let $c = (A + B) / 2$ so that $A \leq c \leq B$.
+
+    Now consider any $w \in W$ so that $w = x + \a \cdot c$ for some $x \in \dom(f)$ and $\a \in \reals$.
+
+    Case: $\a = 0$.
+    Then
+    \gath{
+      f_c(w) = f_c(x + \a \cdot u) = f(x) + \a c = f(x) + 0 = f(x) \leq p(x) = p(x + \a \cdot u) = p(w) \,.
+    }
+
+    Case: $\a > 0$.
+    Then $1/\a \cdot x \in \dom(f)$ so that based on the definition of $c$ we have
+    \gath{
+      c \leq B \leq p\parens{\frac{1}{\a} \cdot x + u} - f\parens{\frac{1}{\a} \cdot x}
+    }
+    Then, since $\a > 0$, $f$ is linear functional, and $p$ is a sublinear functional, it follows that
+    \gath{
+      \a c \leq \a \cdot p\parens{\frac{1}{\a} \cdot x + u} - \a \cdot f\parens{\frac{1}{\a} \cdot x} \\
+      \a c \leq p(x + \a \cdot u) - f(x) \\
+      f(x) + \a c \leq p(x + \a \cdot u) \\
+      f_c(w) \leq p(w) \,.
+    }
+
+    Case: $\a < 0$.
+    Then, again $-1/\a \cdot x \in \dom(f)$ so that based on the definition of $c$ we have
+    \gath{
+      f\parens{-\frac{1}{\a} \cdot x} - p\parens{-\frac{1}{\a} \cdot x - u} \leq A \leq c \,.
+    }
+    Then, since $-\a > 0$, $f$ is a linear functional, and $p$ is a sublinear functional, we have
+    \gath{
+      -\a \cdot f\parens{-\frac{1}{\a} \cdot x} - (-\a) \cdot p\parens{-\frac{1}{\a} \cdot x - u} \leq -\a c \\
+      f(x) - p(x + \a \cdot u) \leq -\a c \\
+      f(x) + \a c \leq p(x + \a \cdot u) \\
+      f_c(w) \leq p(w) \,.
+    }
+
+    Thus in all cases we have $f_c(w) \leq p(w)$.
+    Since $w \in W$ was arbitrary, this completes the proof that $f_c \in F$.
+    But since $f \pss f_c$, this contradicts the fact that $f$ is a $\ss$-maximal element of $F$.
+    Hence it must be that in fact $\dom(f) = V$, thereby completing the overall proof.
+  }
+}
+
+\theoremapp{14}{*}{
+    There is no function $\mu : \pset{\reals} \to \clop{0, \infty} \cup \braces{\infty}$ with the following properties:
+    \begin{enumerate}
+    \item[\ilab{0}] $\mu([a,b]) = b - a$ for any $a$ and $b$ in $\reals$ where $a < b$.
+    \item[\ilab{i}] $\mu(\es) = 0$ and $\mu(\reals) = \infty$.
+    \item[\ilab{ii}] If $\braces{A_n}_{n=0}^\infty$ is a collection of mutually disjoint subsets of $\reals$, then
+      \gath{
+        \mu\parens{\bigcup_{n=0}^\infty A_n} = \sum_{n=0}^\infty \mu(A_n) \,.
+      }
+    \item[\ilab{iii}] If $a \in \reals$, $A \ss \reals$, and $A + a = \braces{x + a \where x \in A}$, then $\mu(A + a) = \mu(A)$.
+    \item[\ilab{iv}] If $A \cap B = \es$ then $\mu(A \cup B) = \mu(A) + \mu(B)$.
+    \item[\ilab{v}] If $A \ss B$ then $\mu(A) \leq \mu(B)$.
+    \end{enumerate}
+}
+\sol{
+  \begin{lem}\label{lem:aoc:intun}
+    If $\braces{A_{i}}_{i \in I}$ is an indexed system of sets and $B$ is another set, then
+    \gath{
+      \bigcup_{i \in I}(B \cap A_i) = B \cap \parens{\bigcup_{i \in I} A_i}
+    }
+  \end{lem}
+  \qproof{
+    First, for brevity, let
+    \ali{
+      L &= \bigcup_{i \in I}(B \cap A_i) &
+      R &= B \cap \parens{\bigcup_{i \in I} A_i}
+    }
+    so that we must show that $L = R$.
+
+    $(\ss)$ Consider any $x \in L$ so that there is an $i \in I$ such that $x \in B \cap A_i$.
+    Therefore $x \in B$ and $x \in A_i$.
+    Since $i \in I$ and $x \in A_i$ it follows that $x \in \bigcup_{i \in I} A_i$.
+    Therefore $x \in R$ since also $x \in B$ so that $L \ss R$ since $x$ was arbitrary.
+
+    $(\supseteq)$ Now consider any $x \in R$ so that $x \in B$ and $x \in \bigcup_{i \in I} A_i$.
+    Thus there is an $i \in I$ where $x \in A_i$.
+    Then $x \in B \cap A_i$ since also $x \in B$.
+    Since $i \in I$ it follows that $x \in L$ so that $R \ss L$ since $x$ was arbitrary.
+
+    This shows that $L = R$ as desired.
+  }
+
+  \mainthrm
+  \qproof{
+    Suppose to the contrary that there is such a function $\mu$.
+    We define the relation $\approx$ on $\reals$ by:
+    \gath{
+      \text{$x \approx y$ if and only if $x - y$ is a rational number.}
+    }
+    First we show that $\approx$ is an equivalence relation, which is straightforward.
+    First consider any $x \in \reals$ so that clearly $x - x = 0 \in \rats$ so that by definition $x \approx x$.
+    Hence $\approx$ is reflexive since $x$ was arbitrary.
+    Now consider any $x$ and $y$ in $\reals$ such that $x \approx y$.
+    Then $z = x - y \in \rats$ by definition.
+    Clearly also then $y - x = -(x - y) = -z \in \rats$ as well since $z \in \rats$ so that $y \approx x$.
+    Thus $\approx$ is also symmetric.
+    Lastly, consider $x$, $y$, and $z$ in $\reals$ where $x \approx y$ and $y \approx z$.
+    Then $a = x - y \in \rats$ and $b = y - z \in \rats$.
+    We then clearly have that
+    \gath{
+      x - z = x - y + y - z = (x - y) + (y - z) = a + b \in \rats
+    }
+    since $a$ and $b$ are both rational.
+    Thus $x \approx z$ so that $\approx$ is transitive.
+    We have therefore shown that $\approx$ is indeed an equivalence relation.
+
+    We then know that $\approx$ partitions $\reals$ into equivalence classes, and that by the Axiom of Choice and Theorem~8.1.3 the partition has a set of representatives $X$.
+    Let
+    \gath{
+      R = \bigcup \braces{X + r \where r \in \rats}
+    }
+    and we show that $R = \reals$.
+    First consider any $y \in R$ so that there is an $r \in \rats$ where $y \in X + r$.
+    From this is follows that there is an $x \in X$ such that $y = x + r$.
+    Clearly then, since $x \in \reals$ (since $X \ss R$) and $r \in \rats$, we have that $y \in \reals$ so that $R \ss \reals$ since $y$ was arbitrary.
+    Now consider any real $y$.
+    Then since $X$ is a set of representatives of a partition of $\reals$, it follows that there is an $x \in X$ such that $y \in \eclass{x}{\approx}$.
+    Then we have that $y \approx x$ so that $r = y - x \in \rats$ by the definition of $\approx$.
+    Thus $y = x + r$ where $x \in X$ so that $y \in X + r$.
+    Since $r \in \rats$ it follows that $y \in R$ so that $R \ss \reals$ since $y$ was arbitrary.
+    This shows that $R = \reals$ as desired.
+
+    Now we show that $X + r$ and $X + q$ are disjoint for rationals $r$ and $q$ where $r \neq q$.
+    To see this, suppose that this is not the case and that there is a $y$ where $y \in X + r$ and $y \in X + q$.
+    Then there is an $x_1 \in X$ where $y = x_1 + r$ and an $x_2 \in X$ where $y = x_2 + q$.
+    Now, it cannot be that $x_1 = x_2$ for then we would have that $y = x_1 + r = x_1 + q$, from which it follows that $r = q$, which we know is not the case.
+    So it must be that $x_1 \neq x_2$, which means that $x_1$ and $x_2$ are in different equivalent classes since $X$ is a set of representatives of disjoint equivalence classes.
+    In particular this means that $x_1 \not \approx x_2$ so that $x_1 - x_2 \notin \rats$.
+    We then have
+    \ali{
+      y = x_1 + r &= x_2 + q \\
+      x_1 - x_2 &= q - r \,,
+    }
+    but this is a contradiction since we have shown that the left side is irrational but the right side is clearly rational since $q$ and $r$ are.
+    It therefore must be that $X + r$ and $X + q$ are indeed disjoint.
+
+    Now suppose for the moment that $\mu(X) = 0$.
+    It then follows from property (iii) that $\mu(X + q) = \mu(X) = 0$ for any rational $q$.
+    Then, since we showed that $R = \reals$, we have that
+    \gath{
+      \mu(\reals) = \mu(R) = \mu\parens{\bigcup \braces{X + r \where r \in \rats}} = \sum_{r \in \rats} \mu(X + r) = \sum_{r \in \rats} 0 = 0
+    }
+    by property (ii), noting that this applies because $\rats$ is countable.
+    This contradicts property (i), according to which $\mu(\reals) = \infty$.
+    So it must be that $\mu(X) > 0$.
+
+    Suppose next that $\mu(X \cap [a, b]) = 0$ for every closed interval $[a,b]$.
+    Let $A_n = [n, n+1]$ for $n \in \ints$ so that clearly $\bigcup_{n \in \ints} A_n = \reals$.
+    We also have that $\mu(X \cap A_n) = 0$ for any $n \in \ints$ since each $A_n$ is a closed interval.
+    It follows from Lemma~\ref{lem:aoc:intun} that
+    \gath{
+      \bigcup_{n \in \ints} (X \cap A_n) = X \cap \parens{\bigcup_{n \in \ints} A_n} = X \cap \reals = X
+    }
+    since $X \ss \reals$.
+    We then have
+    \gath{
+      \mu(X) = \mu\parens{\bigcup_{n \in \ints} (X \cap A_n)} = \sum_{n \in \ints} (X + A_n) = \sum_{n \in \ints} 0 = 0
+    }
+    by property (ii) since $\ints$ is countable.
+    As before, this contradicts property (i) so that it has to be that there is a closed interval $[a,b]$ such that $\mu(X \cap [a,b]) > 0$.
+
+    Let $Y = X \cap [a,b]$ and $P = \rats \cap [0,1]$.
+    Next we show that the sets $\braces{Y + q}_{q \in P}$ are mutually disjoint.
+    Suppose the contrary so that there are $p$ and $q$ in $P$ where $p \neq q$ and a $z$ such that $z \in Y + p$ and $y \in Y + q$.
+    Then there is a $y_1 \in Y$ where $z = y_1 + p$ and a $y_2 \in Y$ such that $z = y_2 + q$.
+    We then have that $y_1$ and $y_2$ are both in $X$ so that $z = y_1 + p \in X + p$ and $z = y_2 + q \in X + q$.
+    But since $p \neq q$, this is not possible since we have shown above that $X + p$ and $X + q$ are disjoint.
+    So it has to be that $\braces{Y + q}_{q \in P}$ are mutually disjoint sets.
+
+    We then have that
+    \gath{
+      \mu\parens{\bigcup_{q \in P} (Y + p)} = \sum_{q \in P} \mu(Y + p) = \sum_{q \in P} \mu(Y)
+    }
+    by properties (ii) and (iii), noting that clearly $P = \rats \cap [0,1]$ is countably infinite.
+    Since $\mu(Y) > 0$ this is an infinite sum of a positive constant so that the result diverges and is thus $\infty$.
+
+    Now consider any $z \in \bigcup_{q \in P} (Y + p)$ so that there is a $q \in P$ such that $z \in Y + q$.
+    Then there is an $y \in Y$ such that $z = y + q$.
+    It follows that $y \in [a, b]$ so that $a \leq y \leq b$.
+    We also have that $0 \leq q \leq 1$ since $q \in P = \rats \cap [0,1]$.
+    We then have that $z = y + q \leq b + q \leq b + 1$.
+    Also clearly $z = y + q \geq a + q \geq a + 0 = a$.
+    Therefore $a \leq z \leq b+1$ so that $z \in [a, b+1]$, which shows that $\bigcup_{q \in P} (Y + p) \ss [a, b+1]$ since $z$ was arbitrary.
+    However, this implies that
+    \gath{
+      \infty = \mu\parens{\bigcup_{q \in P} (Y + p)} \leq \mu([a,b+1]) = b+1-a
+    }
+    by properties (v) and (0).
+    This clearly a contradiction though since $b+1-a$ is finite.
+    Thus our initial assumption that there exists such a function $\mu$ must be incorrect.
   }
 }
 
