--- a/solutions.tex
+++ b/solutions.tex
@@ -56,6 +56,7 @@
 \section{The Axiom of Choice}
 As in the text, asterisks indicate exercises for which the Axiom of Choice is needed.
 \input{sections/sec_8_1}
+\input{sections/sec_8_2}
 
 \end{questions}
 \end{document}
