-Completed section 8.2 exercises -Made book title a macro so it's not duplicated on every document

--- a/errata.tex
+++ b/errata.tex
@@ -3,17 +3,15 @@
 \usepackage{amssymb}
 \usepackage[hidelinks]{hyperref}
 
+\input{macros}
+
 \title{
-  Introduction to Set Theory \\
-  Third Edition, Revised and Expanded \\
-  by Hrbacek and Jech \\
+  \booktitle \\
   \ \\
-  Errata
+  Errata List
 }
 
 \begin{document}
-
-\input{macros}
 
 \maketitle
 
