--- a/macros.tex
+++ b/macros.tex
@@ -116,3 +116,10 @@
 % Main problem and theorem labels
 \def\mainprob{\textbf{Main Problem.}}
 \def\mainthrm{\textbf{Main Theorem.}}
+
+% Book title
+\def\booktitle{
+  Introduction to Set Theory \\
+  Third Edition, Revised and Expanded \\
+  by Karel Hrbacek and Thomas Jech
+}
