--- a/solutions.tex
+++ b/solutions.tex
@@ -1,15 +1,13 @@
 \input{prelude}
 
+% Import all our custom macros
+\input{macros}
+
 \title{
-  Introduction to Set Theory \\
-  Third Edition, Revised and Expanded \\
-  by Hrbacek and Jech \\
+  \booktitle \\
   \ \\
   Solutions Manual
 }
-
-% Import all our custom macros
-\input{macros}
 
 % Lemmas/Corollaries environments
 \newtheorem{lem}{Lemma}[subsubsection]
