-Completed solutions for exercises 9.1.1 and 9.1.2.

--- a/solutions.tex
+++ b/solutions.tex
@@ -56,5 +56,8 @@ As in the text, asterisks indicate exercises for which the Axiom of Choice is ne
 \input{sections/sec_8_1}
 \input{sections/sec_8_2}
 
+\section{Arithmetic of Cardinal Numbers}
+\input{sections/sec_9_1}
+
 \end{questions}
 \end{document}
