--- a/sections/sec_9_1.tex
+++ b/sections/sec_9_1.tex
@@ -29,7 +29,7 @@
   But then $A_{j_1}$ and $A_{j_2}$ are not disjoint (since $x$ is in both) despite the fact that $j_1 \neq j_2$, which contradicts the fact that $\angles{A_j \where j \in J}$ are mutually disjoint.
   So it must be that in that $\unaj{i_1}$ and $\unaj{i_2}$ are disjoint, which proves the result since $i_1$ and $i_2$ were arbitrary.
 
-  Since $\angles{\unaj{i} \where i \in I}$ have been shown to be mutually dijoint, it follows by definition that
+  Since $\angles{\unaj{i} \where i \in I}$ have been shown to be mutually disjoint, it follows by definition that
   \begin{gather}
     \sum_{i \in I} \abs{\unaj{i}} = \abs{\bigcup_{i \in I} \parens{\unaj{i}}} \,. \label{eqn:infsp:sumunaj}
   \end{gather}
@@ -57,7 +57,7 @@
   \qproof{
     Suppose that $\angles{A_i \where i \in I}$ are mutually disjoint sets such that $\abs{A_i} = \k_i$ for all $i \in I$.
     Similarly, suppose that $\angles{B_i \where i \in I}$ are mutually disjoint sets such that $\abs{B_i} = \l_i$ for all $i \in I$.
-    It then follows by defintion that
+    It then follows by definition that
     \ali{
       \sum_{i \in I} \k_i &= \abs{\un A_i} &
       \sum_{i \in I} \l_i &= \abs{\un B_i} \,.
@@ -99,5 +99,76 @@
       \sum_{i \in I} \k_i = \abs{\un A_i} \leq \abs{\un B_i} = \sum_{i \in I} \l_i
     }
     as desired.
+  }
+}
+
+\def\sumn{\sum_{n=0}^\infty}
+\exercise{3}{
+  Find some cardinals $\k_n$, $\l_n$ ($n \in \nats$) such that $k_n < \l_n$ for all $n$, but $\sumn \k_n = \sumn \l_n$.
+}
+\sol{
+  Let $\k_n = 1$ and $\l_n = 2$ for all $n \in \nats$.
+  We claim that these satisfy the required properties.
+  \qproof{
+    Clearly we have $\k_n = 1 < 2 = \l_n$ for all $n \in \nats$.
+    It then follows from Exercise~9.1.4 (and also the more general Theorem~9.1.3) that
+    \gath{
+      \sumn \k_n = \sumn 1 = \sum_{n \in \nats} 1 = \sum_{n < \al_0} 1 = \al_0 \cdot 1 = \al_0
+      = \al_0 \cdot 2 = \sum_{n < \al_0} 2 = \sum_{n \in \nats} 2 = \sumn 2 = \sumn \l_n
+    }
+    as desired.
+  }
+}
+
+\exercise{4}{
+  Prove that $\k + \k + \cdots \text{($\l$ times)} = \l \cdot \k$.
+}
+\sol{
+  \begin{lem}\label{lem:infsp:fsumal}
+    $\sum_{k < n} \al_\a = \al_\a$ for any natural $n \geq 1$ and any ordinal $\a$.
+  \end{lem}
+  \qproof{
+    Consider any ordinal $\a$.
+    We then show the result for any natural $n$ by induction on $n$.
+    For $n=1$ we clearly have $\sum_{k < n} \al_\a = \sum_{k < 1} \al_\a = \al_\a$ since the sum has only one term (the $k=0$ term).
+    Now assume that $\sum_{k < n} \al_\a = \al_\a$.
+    Then clearly
+    \gath{
+      \sum_{k < n+1} \al_\a = \sum_{k < n} \al_\a + \al_\a = \al_\a + \al_\a = \al_\a
+    }
+    by the induction hypothesis and Corollary~7.2.3.
+    This completes the induction.
+  }
+
+  \mainprob
+  \qproof{
+    Case: $\l$ is finite.
+    Then clearly $\l$ is a natural number.
+    If $\k$ is also finite then the result follows from normal natural number arithmetic since this coincides with finite cardinal arithmetic.
+
+    If $\k$ is infinite then $\k = \al_\a$ for some ordinal $\a$.
+    Then, if $\l = 0$, by convention we have
+    \gath{
+      \k + \k + \cdots \text{($\l$ times)} = \sum_{n < \l} \k = \sum_{n < 0} \k = 0 = 0 \cdot \al_\a = \l \cdot \k \,.
+    }
+    If $\l > 0$ then $\l \geq 1$ so that it follows from Lemma~\ref{lem:infsp:fsumal} that
+    \gath{
+      \k + \k + \cdots \text{($\l$ times)} = \sum_{n < \l} \k = \sum_{n < \l} \al_\a = \al_\a = \l \cdot \al_\a = \l \cdot \k \,,
+    }
+    where we have also used Corollary~7.2.2 since $\l$ is a natural number.
+
+    Case: $\l$ is infinite.
+    If $\k = 0$ then clearly $\angles{\es \where \a < \l}$ is a set of mutually disjoint sets (since $\es \cap \es = \es$) where $\abs{\es} = 0 = \k$.
+    Since obviously $\bigcup_{\a < \l} \es = \es$, we have by definition that 
+    \gath{
+      \k + \k + \cdots \text{($\l$ times)} = \sum_{\a < \l} \k = \abs{\bigcup_{\a < \l} \es} = \abs{\es} = 0 = \l \cdot 0 = \l \cdot \k \,.
+    }
+    If $\k$ is nonzero then we can apply Theorem~9.1.3, according to which
+    \gath{
+      \k + \k + \cdots \text{($\l$ times)} = \sum_{\a < \l} \k = \l \cdot \sup\braces{\k \where \a < \l}
+      = \l \cdot \sup\braces{\k} = \l \cdot \k \,.
+    }
+
+    Thus in all cases and sub-cases the result has been shown.
   }
 }
