-Completed exercise 9.1.5 and Theorem~9.1.3 (Theorems document) -Fixed very minor mistake in section 7.2

--- a/sections/sec_7_2.tex
+++ b/sections/sec_7_2.tex
@@ -13,7 +13,7 @@
   }
 
   \begin{lem}\label{lem:aleph:alephadd:setgt}
-    If a set $(A, \prec)$ is isomorphic to ordinal $\a$ and $\a > \b$ for another ordinal $\b$ then there is an $a \in A$ such that $\abs{\b} \leq \abs{X}$ for the set.
+    If a set $(A, \prec)$ is isomorphic to ordinal $\a$ and $\a > \b$ for another ordinal $\b$ then there is an $a \in A$ such that $\abs{\b} \leq \abs{X}$ for the set
     $$
     X = \braces{x \in A \where x \prec a} \,.
     $$
